Documentation/OnlineHelp/_sources/Examples/group___cmp_template_empty.txt
.. first line of composition.rst template

.. first line of group.rst template

.. _group___cmp_template_empty:

================
CmpTemplateEmpty
================

 :ref:`More... <group___cmp_template_empty-details>`

Functions
---------

- USE_STMT DLL_DECL int :ref:`ComponentEntry <group___cmp_template_empty_1gae1981c15c8c2911ee56bc662c9ba86e9>` (INIT_STRUCT * pInitStruct)

- int :ref:`ExportFunctions <group___cmp_template_empty_1ga9b0700711be53a466c6c8494343a465a>` (void)

- int :ref:`ImportFunctions <group___cmp_template_empty_1ga87d62c8eb63af9f15a122c28448733bf>` (void)

- RTS_UI32 :ref:`CmpGetVersion <group___cmp_template_empty_1gacf72d3e99274b04feca13b139859c539>` (void)

- RTS_RESULT :ref:`HookFunction <group___cmp_template_empty_1ga0b2ad195d710768e5fa78879787cd805>` (RTS_UI32 ulHook, RTS_UINTPTR ulParam1, RTS_UINTPTR ulParam2)

.. _group___cmp_template_empty-details:

Detailed Description
--------------------



Example for an empty runtime component frame that can be used as a starting point to develop own components.

MANDATORY FUNCTIONS:

- :ref:`ComponentEntry() <_cmp_c_s_i_embedded_8c_1a428e512ef9d385507218f5cb410ecf22>`

- ExportFunctions()

- ImportFunctions()

- CmpGetVersion()

- HookFunction()

**Copyright:**

\(c) 2003-2016 3S-Smart Software Solutions

Function Documentation
----------------------

.. _group___cmp_template_empty_1gae1981c15c8c2911ee56bc662c9ba86e9:

USE_STMT DLL_DECL int ComponentEntry (INIT_STRUCT *pInitStruct)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Entry function of the component. Called at startup for each component. Used to exchange function pointers with the component manager.

**Parameters**

+---------+-------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| [in]    | pInitStruct | Pointer to structure with: pfExportFunctions OUT Pointer to function that exports component functions pfImportFunctions OUT Pointer to function that imports functions from other components pfGetVersion OUT Pointer to function to get component version pfRegisterAPI IN Pointer to component mangager function to register a api function pfGetAPI IN Pointer to component mangager function to get a api function pfCallHook IN Pointer to component mangager function to call a hook function |
+---------+-------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+

**Returns:**

ERR_OK if component could be initialized, else error code.

.. _group___cmp_template_empty_1ga9b0700711be53a466c6c8494343a465a:

static int ExportFunctions (void)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Publish exported functions to the component manager, to make them available for other components. Use generated macro EXPORT_STMT.
**Returns:**

ERR_OK or error code in case of error

.. _group___cmp_template_empty_1ga87d62c8eb63af9f15a122c28448733bf:

static int ImportFunctions (void)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Import function pointers from other components. Use generated macro IMPORT_STMT.
**Returns:**

ERR_OK or error code if function name could not be resolved

.. _group___cmp_template_empty_1gacf72d3e99274b04feca13b139859c539:

static RTS_UI32 CmpGetVersion (void)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Return the version of our component.
**Returns:**

Version as defined in dep file

.. _group___cmp_template_empty_1ga0b2ad195d710768e5fa78879787cd805:

static RTS_RESULT HookFunction (RTS_UI32 ulHook, RTS_UINTPTR ulParam1, RTS_UINTPTR ulParam2)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hook function to get all broadcast hooks of the component manager. All init and exit stuff must be implemented here!

**Parameters**

+---------+----------+--------------------------------------------------------------------------+
| [in]    | ulHook   | Kind of hook. See CH_ definitions in CmpItf.h for details.               |
+---------+----------+--------------------------------------------------------------------------+
| [in]    | ulParam1 | Hook specific first parameter. See definitions in CmpItf.h for details.  |
+---------+----------+--------------------------------------------------------------------------+
| [in]    | ulParam2 | Hook specific second parameter. See definitions in CmpItf.h for details. |
+---------+----------+--------------------------------------------------------------------------+

**Returns:**

Error code

.. last line of group.rst template
.. last line of composition.rst template


